--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,9 @@ heck = "0.3.0"
 lettre = "0.9.2"
 lettre_email = "0.9.2"
 num_cpus = "1.10"
-rocket = "0.4.2"
-rocket_contrib = { version = "0.4.2", features = ["json"] }
-rocket_i18n = { git = "https://github.com/Plume-org/rocket_i18n", rev = "e922afa7c366038b3433278c03b1456b346074f2" }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "async" }
+rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "async" , features = ["json"] }
+rocket_i18n = { git = "https://github.com/Plume-org/rocket_i18n", rev = "go-async" }
 rpassword = "4.0"
 runtime-fmt = "0.4.0"
 scheduled-thread-pool = "0.2.2"
