--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ lettre_email = "0.9.2"
 num_cpus = "1.10"
 rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "async" }
 rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "async" , features = ["json"] }
-rocket_i18n = { git = "https://github.com/Plume-org/rocket_i18n", rev = "go-async" }
 rpassword = "4.0"
 runtime-fmt = "0.4.0"
 scheduled-thread-pool = "0.2.2"
@@ -64,6 +63,12 @@ path = "plume-common"
 
 [dependencies.plume-models]
 path = "plume-models"
+
+[dependencies.rocket_i18n]
+git = "https://github.com/Plume-org/rocket_i18n"
+branch = "go-async"
+default-features = false
+features = ["rocket"]
 
 [build-dependencies]
 ructe = "0.9.0"
