--- a/plume-common/Cargo.toml
+++ b/plume-common/Cargo.toml
@@ -14,7 +14,7 @@ heck = "0.3.0"
 hex = "0.3"
 hyper = "0.12.33"
 openssl = "0.10.22"
-rocket = "0.4.0"
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "async" }
 reqwest = "0.9"
 serde = "1.0"
 serde_derive = "1.0"
