--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,10 @@ serde_json = "1.0"
 serde_qs = "0.5"
 shrinkwraprs = "0.2.1"
 syntect = "3.3"
+tokio = "0.2"
 validator = "0.8"
 validator_derive = "0.8"
-webfinger = "0.4.1"
+webfinger = "0.5"
 
 [[bin]]
 name = "plume"
