--- a/plume-common/Cargo.toml
+++ b/plume-common/Cargo.toml
@@ -10,18 +10,19 @@ activitystreams-derive = "0.1.1"
 activitystreams-traits = "0.1.0"
 array_tool = "1.0"
 base64 = "0.10"
+futures-util = "*"
 heck = "0.3.0"
 hex = "0.3"
-hyper = "0.12.33"
+hyper = "0.13"
 openssl = "0.10.22"
 rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "async" }
-reqwest = "0.9"
+reqwest = "0.10"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 shrinkwraprs = "0.2.1"
 syntect = "3.3"
-tokio = "0.1.22"
+tokio = "0.2"
 
 [dependencies.chrono]
 features = ["serde"]
