--- a/plume-common/Cargo.toml
+++ b/plume-common/Cargo.toml
@@ -16,7 +16,6 @@ hex = "0.3"
 hyper = "0.13"
 openssl = "0.10.22"
 rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "async" }
-reqwest = "0.10"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -31,3 +30,7 @@ version = "0.4"
 [dependencies.pulldown-cmark]
 default-features = false
 version = "0.2.0"
+
+[dependencies.reqwest]
+features = ["json", "blocking"]
+version = "0.10"
