asyncify plume-models: media upload is now async
including the use of tokio!

--- a/plume-models/Cargo.toml
+++ b/plume-models/Cargo.toml
@@ -21,6 +21,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 tantivy = "0.10.1"
+tokio = "0.2"
 url = "2.1"
 walkdir = "2.2"
 webfinger = "0.5"
